add translations and minor fixes

--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -3,3 +3,5 @@ $s_plugin_SmsApi_phone_number = 'Phone number';
 $s_plugin_SmsApi_title = 'Sms Api';
 $s_plugin_SmsApi_configuration_title = 'Configure SMS template';
 $s_plugin_SmsApi_smsApiKey= 'Sms Api Key';
+$s_plugin_SmsApi_message= 'Message';
+$s_plugin_SmsApi_save= 'Save';
